src/test/deca/codegen/valid/castClass.deca
//
//
//
//
// ok

class A {}
class B extends A {}

{
    B b = new B();
    A a = (A)(b);
    print("ok");
}
