src/test/deca/codegen/invalid/classInClass.deca




// Error: stack_overflow_error
 
class A {
    B b = new B();
}

class B {
    A a = new A();
}

{
    B b = new B();
}